more spacing fixes

--- a/css/main.scss
+++ b/css/main.scss
@@ -193,7 +193,7 @@ h3{
 }
 h4{
     font-family: 'alrightRegular';
-    font-size: 20px;
+    font-size: 18px;
     letter-spacing: 0.2px;
     line-height: 32px;
     margin: 0px;
@@ -590,7 +590,7 @@ section{
     right: 16px;
 }
 .repoTitle{
-    padding: 16px;
+    padding: 10px 16px;
     background: rgba($mainBlue, 0.03);
     position: relative;
     p{
